# Shir0haChat

./: .gitignore  CMakeLists.txt  README.md  ShirohaChat项目文档 .odt
client/: CMakeLists.txt
client/src/ShirohaChat/: CMakeLists.txt  Main.qml  app_coordinator.cpp  app_coordinator.h  main.cpp  network_service.cpp  network_service.h
client/src/ShirohaChat/Application/Contracts/: authenticate_result_dto.h  friend_list_item_dto.h  friend_request_dto.h  group_action_result_dto.h  group_list_entry_dto.h  group_member_dto.h  group_session_info_dto.h  send_message_result_dto.h  session_list_item_dto.h  session_summary_dto.h  use_case_errors.h
client/src/ShirohaChat/Application/Ports/: INetworkGateway.h
client/src/ShirohaChat/Application/Queries/: i_friend_queries.h  i_group_queries.h  i_session_queries.h
client/src/ShirohaChat/Application/Services/: CurrentSessionService.h
client/src/ShirohaChat/Controllers/: auth_controller.cpp  auth_controller.h  chat_view_model.cpp  chat_view_model.h  contact_controller.cpp  contact_controller.h  group_controller.cpp  group_controller.h  session_list_controller.cpp  session_list_controller.h
client/src/ShirohaChat/Core/: CMakeLists.txt  message_list_model.cpp  message_list_model.h  session_list_model.cpp  session_list_model.h
client/src/ShirohaChat/Storage/: CMakeLists.txt  auth_state_repository.cpp  auth_state_repository.h  database_manager.cpp  database_manager.h  friend_repository.cpp  friend_repository.h  group_repository.cpp  group_repository.h  message_repository.cpp  message_repository.h  session_repository.cpp  session_repository.h  unit_of_work.cpp  unit_of_work.h  user_repository.cpp  user_repository.h
client/src/ShirohaChat/UI/Components/: AppToast.qml  Avatar.qml  CMakeLists.txt  ConnectionStatusBar.qml  InputBar.qml  MessageBubble.qml
client/src/ShirohaChat/UI/Views/: AddFriendDialog.qml  CMakeLists.txt  ChatView.qml  CreateGroupDialog.qml  FriendRequestsDialog.qml  GroupInfoView.qml  LoginView.qml  SessionSidebar.qml
client/src/ShirohaChat/UseCases/: authenticate_use_case.cpp  authenticate_use_case.h  friend_request_use_case.cpp  friend_request_use_case.h  group_management_use_case.cpp  group_management_use_case.h  receive_message_use_case.cpp  receive_message_use_case.h  send_message_use_case.cpp  send_message_use_case.h  session_sync_use_case.cpp  session_sync_use_case.h  switch_session_use_case.cpp  switch_session_use_case.h
docs/: .~lock.ShirohaChat项目文档 .odt#  ShirohaChat项目文档 .odt  ShirohaChat项目文档.md
docs/vpp/: 客户端核心类图.vpp  服务端核心类图.vpp  架构设计图.vpp  线程模型图.vpp  通信图.vpp
qml/: Main.qml
qml/components/: Avatar.qml  InputBar.qml  MessageBubble.qml
qml/views/: ChatView.qml  SessionSidebar.qml
server/: CMakeLists.txt
server/src/: client_session.cpp  client_session.h  main.cpp  server_app.cpp  server_app.h
server/src/application/contracts/: friend_types.h  group_types.h  offline_types.h  store_types.h
server/src/application/services/: friend_management_service.cpp  friend_management_service.h  group_management_service.cpp  group_management_service.h  message_delivery_service.cpp  message_delivery_service.h
server/src/auth/: jwt_manager.cpp  jwt_manager.h
server/src/dispatch/: command_dispatcher.cpp  command_dispatcher.h
server/src/handlers/: auth_handler.cpp  auth_handler.h  friend_handler.cpp  friend_handler.h  group_handler.cpp  group_handler.h  heartbeat_handler.cpp  heartbeat_handler.h  i_command_handler.h  message_handler.cpp  message_handler.h
server/src/services/: message_router.cpp  message_router.h  offline_manager.cpp  offline_manager.h  session_manager.cpp  session_manager.h
server/src/storage/: friend_repository.cpp  friend_repository.h  group_repository.cpp  group_repository.h  message_repository.cpp  message_repository.h  message_store.cpp  message_store.h  offline_queue_repository.cpp  offline_queue_repository.h  server_db.cpp  server_db.h
shared/: CMakeLists.txt
shared/common/: CMakeLists.txt  config.h  session_id.h
shared/domain/: CMakeLists.txt  auth_state.h  contact.cpp  contact.h  friend_request.cpp  friend_request.h  group.cpp  group.h  group_member.cpp  group_member.h  i_auth_state_repository.h  i_contact_repository.h  i_friend_request_repository.h  i_group_repository.h  i_message_repository.h  i_session_repository.h  i_unit_of_work.h  i_user_repository.h  message.cpp  message.h  session.cpp  session.h  session_summary.h  user.cpp  user.h
shared/protocol/: CMakeLists.txt  commands.cpp  commands.h  packet.cpp  packet.h  protocol_version.h
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  message_list_model_qtest.cpp  network_service_qtest.cpp  session_list_model_qtest.cpp  session_repository_qtest.cpp
tests/server/: CMakeLists.txt  jwt_manager_gtest.cpp
tests/shared/: CMakeLists.txt  packet_gtest.cpp
视频/: 演示ppt.pptx
